# playground-python-fastapi

./: .gitignore  LICENCE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python.yml
.run/: uv run fastapi dev.run.xml
app/: main.py
app/hello/: hello.py
tests/: test_main.py
tests/hello/: test_hello.py
