[project]
name = "playground-python-fastapi"
version = "0.1.0"
description = "Playground project for Python and FastAPI"
readme = "README.md"
authors = [
    { name = "James Bacon", email = "james@baconi.co.uk" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
